# serializer version: 1
# name: test_GRL_bsr_grl_base
  ImageModelDescriptor(
    architecture=GRLArch(
      id='GRL',
      name='GRL',
    ),
    input_channels=3,
    bytes=80066636,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'base',
      '180dim',
      'w16df4',
      's32x64',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_GRL_sr_grl_tiny_c3x3
  ImageModelDescriptor(
    architecture=GRLArch(
      id='GRL',
      name='GRL',
    ),
    input_channels=3,
    bytes=3576300,
    output_channels=3,
    purpose='SR',
    scale=3,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'tiny',
      '64dim',
      'w32df4',
      's64x64',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_GRL_sr_grl_tiny_c3x4
  ImageModelDescriptor(
    architecture=GRLArch(
      id='GRL',
      name='GRL',
    ),
    input_channels=3,
    bytes=3624768,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'tiny',
      '64dim',
      'w32df4',
      's64x64',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
